--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <script type="text/javascript">
     $(function(){
-      $("p").css("color","red");
+      $("dblclick").css("color","red");
     });
   </script>
 </head>
