--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <script type="text/javascript">
     $(function(){
       $("#toggle").on("click",function(){
-        $("#target").toggle("slow");
+        $("p").css("color","red");
       });
     });
   </script>
 </head>
-<body>
-  <div id="target">表示・非表示される要素</div>
-  <button id="toggle">切り替え</button>
+<body text="white">
+  <p>わたしのページへようこそ</p>
+  <button id="toggle">裏世界へ</button>
   </body>
 </html>
