--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     $(function(){
       $("#toggle").on("click",function(){
         $("p").css("color","red");
+        $("p").css("bgcolor","brack");
       });
     });
   </script>
 </head>
-<body text="white">
+<body text="white" bgcolor="green">
   <p>わたしのページへようこそ</p>
   <button id="toggle">裏世界へ</button>
   </body>
