--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     $(function(){
       $("#toggle").on("click",function(){
         $("p").css("color","red");
-        $("p").css("bgcolor","brack");
+        $("p").css("bgcolor","black");
       });
     });
   </script>
