--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript">
     $(function(){
       $("#toggle").on("click",function(){
-        $("p").css("color","red");
+        $("p").css("text","red");
         $("body").css("bgcolor","black");
       });
     });
