--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     $(function(){
       $("#toggle").on("click",function(){
         $("p").css("text","red");
-        $("body").css("bgcolor","black");
+        $(".body").css("background-color","black");
       });
     });
   </script>
