--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     $(function(){
       $("#toggle").on("click",function(){
         $("p").css("text","red");
-        $(".body").css("background-color","black");
+        $("#terget").css("background-color","black");
       });
     });
   </script>
 </head>
 <body text="white" bgcolor="green">
+  <#terget>
   <p>わたしのページへようこそ</p>
   <button id="toggle">裏世界へ</button>
+    </#terget>
   </body>
 </html>
