--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     });
   </script>
 </head>
-<body text="white" bgcolor="green">
-  <#terget>
+<#terget>
+  <body text="white" bgcolor="green">
+  
   <p>わたしのページへようこそ</p>
   <button id="toggle">裏世界へ</button>
-    </#terget>
-  </body>
+    
+  </body></#terget>
 </html>
