--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     });
   </script>
 </head>
-<#terget>
   <body text="white" bgcolor="green">
   
-  <p>わたしのページへようこそ</p>
+  <#terget><p>わたしのページへようこそ</p></#terget>
   <button id="toggle">裏世界へ</button>
     
-  </body></#terget>
+  </body>
 </html>
