--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
   <body text="white" bgcolor="green">
   
-  <#terget><p>わたしのページへようこそ</p></#terget>
+  <div id="#terget"><p>わたしのページへようこそ</p></div>
   <button id="toggle">裏世界へ</button>
     
   </body>
