--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     $(function(){
       $("#toggle").on("click",function(){
         $("p").css("text","red");
-        $("#terget").css("background-color","black");
+        $("#target").css("bgcolor","black");
       });
     });
   </script>
 </head>
   <body text="white" bgcolor="green">
   
-  <div id="#terget"><p>わたしのページへようこそ</p></div>
+  <div id="#target"><p>わたしのページへようこそ</p></div>
+    
   <button id="toggle">裏世界へ</button>
     
   </body>
