--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
   <body text="white" bgcolor="green">
   
-  <div id="#target"><p>わたしのページへようこそ</p></div>
+  <div id="#target">わたしのページへようこそ</div>
     
   <button id="toggle">裏世界へ</button>
     
