--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     $(function(){
       $("#toggle").on("click",function(){
         $("#target").css("text","red")
-                    .css("background-color","black");
+                   // .css("background-color","black");
       });
     });
   </script>
