--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     $(function(){
       $("#toggle").on("click",function(){
-        $("#target").css("text","red")
-                   // .css("background-color","black");
+        $("#target").css("text","red");
+                
       });
     });
   </script>
